--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,13 @@
+<div>
+  1db:
+  <a href="{{ url_for('index') }}">Home</a>
+  {% if current_user.is_anonymous %}
+  <a href="{{ url_for('login') }}">Login</a>
+  {% else %}
+  <a href="{{ url_for('logout') }}">Logout</a>
+  {% endif %}
+</div>
+
 <html>
   <head>
     {% if title %}
@@ -7,7 +17,6 @@
     {% endif %}
   </head>
   <body>
-    <div>1db: <a href="/index">Home</a></div>
     <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
