Change images to plotly

--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -17,6 +17,17 @@
         <input type="submit" value="Apply">
     </form>
 
-    <div style="text-align: center;"> <img src="../static/images/plots.png"> </div>
+    
+    <div style="text-align: center;"></div> <object type="text/html" width="1300" height="1000"  data="../static/images/new_plot.html"></object>
+       
+
 
 {% endblock %}
+
+<!-- <div style="text-align: center;"> <img src="../static/images/plots.png"> </div> -->
+
+<!-- <script>
+    var link = document.querySelector('link[rel=import]');
+    var content = link.import.querySelector('#divPlotly');
+    document.body.appendChild(content.cloneNode(true));
+</script> -->
